--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "styled-components": "^5.3.9",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -39,16 +40,11 @@
     "prepare": "husky install",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src --color",
+    "lint:fix": "npm run lint -- --fix",
     "pre-commit": "lint-staged",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -71,6 +67,12 @@
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.4",
     "video.js": "^8.0.4"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "husky": {
     "hooks": {
