--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gh-pages": "^5.0.0",
     "hls.js": "^1.3.4",
     "modern-normalize": "^1.1.0",
+    "petrovich-custom-hooks": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
